ajout de la couleur à l'arrière plan

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link rel="stylesheet" href="ressources/style.css">
+	</head>
 	<title>Bienvenue</title> 
 	<body>
 		<div align="center">
