--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<title>Bienvenue</title> 
 	<body>
 		<div align="center">
-			<h1>Bienvenue</h1>
+			<h1>Bienvenue les ami(e)s</h1>
 		</div>
 	</body> 
 </html>
