--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Bienvenue</title> 
 	<body>
 		<div align="center">
-			<h1>Bienvenue les ami(e)s</h1>
+			<h1>Bonjour</h1>
 		</div>
 	</body> 
 </html>
